Update table using css.html

--- a/table using css.html
+++ b/table using css.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-table ,th,td{border:1px solid black;
+table ,th,td{border:1px solid red;
 border-collapse: collapse;}
 td{color:greenyellow;}
 th{background-color:skyblue;}
