--- a/External.html
+++ b/External.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link ref"stylesheet" href="Style.css">
+<link rel="stylesheet" href="Style.css">
 </head>
 <body>
 <h1>CSS</h1>
